--- a/scripts/mambrini_UD4HL.ipynb
+++ b/scripts/mambrini_UD4HL.ipynb
@@ -639,7 +639,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python NLP (nlp)",
+   "display_name": "NLP environment (nlp)",
    "language": "python",
    "name": "nlp"
   },
@@ -653,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
