updated the tagging of xeir
IN many cases, xeir, "hand," was listed as an iobj and obj. In most cases, it should be a obl.

exception: entiqhmi - place someting in his hand. The "in his hand" is sufficiently necessary that it counts to me as an object.

--- a/data/annotation/latest/Epic_UD_data.ipynb
+++ b/data/annotation/latest/Epic_UD_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        " './tlg0013/tlg0013.tlg002.daphne_tb-grc1.conllu']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,126 +58,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ἔχω 24\n",
+      "1 tlg0020.tlg003:sent2273422:5\n",
+      "tlg0020.tlg003:sent2273422:5 μῆνις {}\n",
+      "1 tlg0012.tlg001:sent2274106:1\n",
+      "tlg0012.tlg001:sent2274106:1 μῆνις {'obj': 1}\n",
+      "1 tlg0012.tlg001:sent2274140:8\n",
+      "tlg0012.tlg001:sent2274140:8 μῆνις {'obj': 2}\n",
+      "1 tlg0012.tlg001:sent2275445:29\n",
+      "tlg0012.tlg001:sent2275445:29 μῆνις {'obj': 3}\n",
+      "1 tlg0012.tlg001:sent2275520:5\n",
+      "tlg0012.tlg001:sent2275520:5 μῆνις {'obj': 4}\n",
+      "1 tlg0012.tlg001:sent2275665:9\n",
+      "tlg0012.tlg001:sent2275665:9 μῆνις {'obj': 4, 'nsubj': 1}\n",
+      "1 tlg0012.tlg001:sent2277013:22\n",
+      "tlg0012.tlg001:sent2277013:22 μῆνις {'obj': 5, 'nsubj': 1}\n",
+      "1 tlg0012.tlg001:sent2278452:35\n",
+      "tlg0012.tlg001:sent2278452:35 μῆνις {'obj': 6, 'nsubj': 1}\n",
+      "1 tlg0012.tlg001:sent2278897:14\n",
+      "tlg0012.tlg001:sent2278897:14 μῆνις {'obj': 7, 'nsubj': 1}\n",
+      "1 tlg0012.tlg001:sent2279597:9\n",
+      "tlg0012.tlg001:sent2279597:9 μῆνις {'obj': 7, 'nsubj': 1, 'amod': 1}\n",
+      "1 tlg0012.tlg001:sent2280451:9\n",
+      "tlg0012.tlg001:sent2280451:9 μῆνις {'obj': 8, 'nsubj': 1, 'amod': 1}\n",
+      "1 tlg0012.tlg001:sent2280470:9\n",
+      "tlg0012.tlg001:sent2280470:9 μῆνις {'obj': 9, 'nsubj': 1, 'amod': 1}\n",
+      "1 tlg0012.tlg001:sent2281226:16\n",
+      "tlg0012.tlg001:sent2281226:16 μῆνις {'obj': 10, 'nsubj': 1, 'amod': 1}\n",
+      "1 tlg0012.tlg002:sent2185812:4\n",
+      "tlg0012.tlg002:sent2185812:4 μῆνις {'obj': 10, 'nsubj': 2, 'amod': 1}\n",
+      "1 tlg0012.tlg002:sent2186096:7\n",
+      "tlg0012.tlg002:sent2186096:7 μῆνις {'obj': 11, 'nsubj': 2, 'amod': 1}\n",
+      "1 tlg0012.tlg002:sent2186834:9\n",
+      "tlg0012.tlg002:sent2186834:9 μῆνις {'obj': 11, 'nsubj': 2, 'amod': 1, 'obl': 1}\n",
+      "1 tlg0012.tlg002:sent2189325:25\n",
+      "tlg0012.tlg002:sent2189325:25 μῆνις {'obj': 12, 'nsubj': 2, 'amod': 1, 'obl': 1}\n",
+      "1 tlg0013.tlg002:sent179:25\n",
+      "tlg0013.tlg002:sent179:25 μῆνις {'obj': 13, 'nsubj': 2, 'amod': 1, 'obl': 1}\n",
+      "1 tlg0013.tlg002:sent209:26\n",
+      "tlg0013.tlg002:sent209:26 μῆνις {'obj': 14, 'nsubj': 2, 'amod': 1, 'obl': 1}\n",
+      "συνάγω 10\n",
       "\n",
-      "tlg0020.tlg002:sent1715898:5 ἔχουσιν ἔχω\n",
-      "tlg0020.tlg002:sent1715898:2 δέ δ̓ cc\n",
-      "tlg0020.tlg002:sent1715898:3 ἄνδιχα ἄνδιχα advmod\n",
-      "tlg0020.tlg002:sent1715898:4 θυμός θυμὸν obj\n",
+      "tlg0012.tlg001:sent2274668:7 συνάγω ξυνάγωμεν\n",
+      "tlg0012.tlg001:sent2274668:6 ἵνα ἵνα mark\n",
+      "tlg0012.tlg001:sent2274668:8 Ἄρηα Ἄρης obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715914:3 ἔχουσι ἔχω\n",
-      "tlg0020.tlg002:sent1715914:1 κρύπτω κρύψαντες advcl\n",
-      "tlg0020.tlg002:sent1715914:2 γάρ γὰρ advmod\n",
-      "tlg0020.tlg002:sent1715914:4 θεός θεοὶ nsubj\n",
-      "tlg0020.tlg002:sent1715914:5 βίος βίον obj\n",
-      "tlg0020.tlg002:sent1715914:6 ἄνθρωπος ἀνθρώποισιν obl\n",
+      "tlg0012.tlg001:sent2275016:7 συνάγω σύναγον\n",
+      "tlg0012.tlg001:sent2275016:1 ἀτὰρ ἀτάρ discourse\n",
+      "tlg0012.tlg001:sent2275016:2 κήρυκες κῆρυξ nsubj\n",
+      "tlg0012.tlg001:sent2275016:4 ὅρκια ὅρκιον obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715915:13 ἔχειν ἔχω\n",
-      "tlg0020.tlg002:sent1715915:9 ὥστε ὥστε mark\n",
-      "tlg0020.tlg002:sent1715915:10 σύ σε nsubj\n",
-      "tlg0020.tlg002:sent1715915:12 ἐνιαυτός ἐνιαυτὸν obl\n",
-      "tlg0020.tlg002:sent1715915:15 ἀεργός ἀεργὸν advcl\n",
+      "tlg0012.tlg001:sent2275888:16 συνάγω ξυνάγοντες\n",
+      "tlg0012.tlg001:sent2275888:15 ἔριδα ἔρις obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715938:19 ἔχοντες ἔχω\n",
-      "tlg0020.tlg002:sent1715938:16 πᾶς πάντες det\n",
-      "tlg0020.tlg002:sent1715938:18 δῶμα δώματ̓ obj\n",
+      "tlg0012.tlg001:sent2275965:3 συνάγω ξυνάγουσα\n",
+      "tlg0012.tlg001:sent2275965:4 γεραιὰς γεραιός obj\n",
+      "tlg0012.tlg001:sent2275965:5 νηὸν ναός obl:arg\n",
       "\n",
-      "tlg0020.tlg002:sent1715941:8 εἶχ' ἔχω\n",
-      "tlg0020.tlg002:sent1715941:5 ὅτε ὅτε advmod\n",
-      "tlg0020.tlg002:sent1715941:6 δή δὴ advmod\n",
-      "tlg0020.tlg002:sent1715941:7 κακός κακὸν obj\n",
+      "tlg0012.tlg001:sent2278646:11 συνάγω ξυνάγοντες\n",
+      "tlg0012.tlg001:sent2278646:10 ἔριδα ἔρις obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715955:11 ἔχοντες ἔχω\n",
-      "tlg0020.tlg002:sent1715955:10 δῶμα δώματ̓ obj\n",
+      "tlg0012.tlg001:sent2278799:12 συνάγω σύναγον\n",
+      "tlg0012.tlg001:sent2278799:6 δ' δέ cc\n",
+      "tlg0012.tlg001:sent2278799:7 ἄρ' ἄρα advmod\n",
+      "tlg0012.tlg001:sent2278799:8 αὐτῷ αὐτός obl\n",
+      "tlg0012.tlg001:sent2278799:9 Τρῶες Τρώς nsubj\n",
+      "tlg0012.tlg001:sent2278799:11 Δαναοὶ Δαναοί nsubj\n",
+      "tlg0012.tlg001:sent2278799:14 ὑσμίνην ὑσμίνη obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715957:7 ἔχοντες ἔχω\n",
-      "tlg0020.tlg002:sent1715957:6 θυμός θυμὸν obj\n",
+      "tlg0012.tlg001:sent2279626:8 συνάγω σύναγον\n",
+      "tlg0012.tlg001:sent2279626:2 δὲ δέ cc\n",
+      "tlg0012.tlg001:sent2279626:3 δὴ δή advmod\n",
+      "tlg0012.tlg001:sent2279626:5 Τρῶες Τρώς nsubj\n",
+      "tlg0012.tlg001:sent2279626:7 Δαναοὶ Δαναοί nsubj\n",
+      "tlg0012.tlg001:sent2279626:10 ὑσμίνην ὑσμίνη obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715965:5 ἔσχον ἔχω\n",
-      "tlg0020.tlg002:sent1715965:1 καί καὶ cc\n",
-      "tlg0020.tlg002:sent1715965:3 γέρας γέρας obj\n",
+      "tlg0012.tlg001:sent2280582:8 συνάγω ξυνάγωμεν\n",
+      "tlg0012.tlg001:sent2280582:7 ἵνα ἵνα mark\n",
+      "tlg0012.tlg001:sent2280582:9 Ἄρηα Ἄρης obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715965:18 ἔχοντες ἔχω\n",
-      "tlg0020.tlg002:sent1715965:17 δῶμα δώματ̓ obj\n",
+      "tlg0012.tlg002:sent2186913:3 συνάγω σύναγεν\n",
+      "tlg0012.tlg002:sent2186913:2 εἰπὼν εἶπον advcl\n",
+      "tlg0012.tlg002:sent2186913:4 νεφέλας νεφέλη obj\n",
       "\n",
-      "tlg0020.tlg002:sent1715967:17 ἔχοντες ἔχω\n",
-      "tlg0020.tlg002:sent1715967:16 ἄλγος ἄλγἐ obj\n",
-      "tlg0020.tlg002:sent1715967:18 ἀφραδία ἀφραδίῃς obl\n",
-      "\n",
-      "tlg0020.tlg002:sent1715969:18 ἔχουσιν ἔχω\n",
-      "tlg0020.tlg002:sent1715969:16 ὅς οἳ nsubj\n",
-      "tlg0020.tlg002:sent1715969:17 Ὄλυμπος Ὄλυμπον obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1715972:8 ἔχον ἔχω\n",
-      "tlg0020.tlg002:sent1715972:6 ἀλλά ἀλλ' cc\n",
-      "tlg0020.tlg002:sent1715972:10 θυμός θυμόν obj\n",
-      "tlg0020.tlg002:sent1715972:12 ἄπλαστος ἄπλαστοι nsubj\n",
-      "\n",
-      "tlg0020.tlg002:sent1715981:7 ἔχοντες ἔχω\n",
-      "tlg0020.tlg002:sent1715981:6 θυμός θυμὸν obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716011:1 ἔχει ἔχω\n",
-      "tlg0020.tlg002:sent1716011:2 νυν νύ advmod\n",
-      "tlg0020.tlg002:sent1716011:3 σύ σε obj\n",
-      "tlg0020.tlg002:sent1716011:5 ἀρείων ἀρείων nsubj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716044:19 ἔχουσιν ἔχω\n",
-      "tlg0020.tlg002:sent1716044:17 ὅς οἳ nsubj\n",
-      "tlg0020.tlg002:sent1716044:18 Ὄλυμπος Ὄλυμπον obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716050:12 ἕξει ἔχω\n",
-      "tlg0020.tlg002:sent1716050:7 εἰ εἰ mark\n",
-      "tlg0020.tlg002:sent1716050:10 δίκη δίκην obj\n",
-      "tlg0020.tlg002:sent1716050:11 ἄδικος ἀδικώτερος nsubj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716086:25 ἔχωσιν ἔχω\n",
-      "tlg0020.tlg002:sent1716086:18 ὡς ὥς mark\n",
-      "tlg0020.tlg002:sent1716086:19 ἄν κέ advmod\n",
-      "tlg0020.tlg002:sent1716086:20 σύ τοι obl\n",
-      "tlg0020.tlg002:sent1716086:22 καρδία κραδίην obj\n",
-      "tlg0020.tlg002:sent1716086:29 ὠνέομαι ὠνῇ advcl\n",
-      "\n",
-      "tlg0020.tlg002:sent1716150:15 ἔχοντε ἔχω\n",
-      "tlg0020.tlg002:sent1716150:14 μέτρον μέτρον obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716153:30 ἔχων ἔχω\n",
-      "tlg0020.tlg002:sent1716153:26 ἀλλά ἀλλ' cc\n",
-      "tlg0020.tlg002:sent1716153:28 ἔργον ἔργῳ iobj\n",
-      "tlg0020.tlg002:sent1716153:29 θυμός θυμὸν obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716165:10 ἐχέμεν ἔχω\n",
-      "tlg0020.tlg002:sent1716165:9 μελέτη μελέτην obj\n",
-      "tlg0020.tlg002:sent1716165:12 τίθημι θέσθαι ccomp\n",
-      "\n",
-      "tlg0020.tlg002:sent1716172:6 ἔχων ἔχω\n",
-      "tlg0020.tlg002:sent1716172:7 μακέλη μακέλην obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716205:13 ἔχωσι ἔχω\n",
-      "tlg0020.tlg002:sent1716205:8 ὡς ὡς mark\n",
-      "tlg0020.tlg002:sent1716205:10 μαίομαι μαιόμενοι advcl\n",
-      "tlg0020.tlg002:sent1716205:12 κευθμών κευθμῶνας obj\n",
-      "\n",
-      "tlg0020.tlg002:sent1716212:5 ἔχειν ἔχω\n",
-      "tlg0020.tlg002:sent1716212:1 κεφαλή κεφαλῆφι obl\n",
-      "tlg0020.tlg002:sent1716212:2 δέ δ̓ cc\n",
-      "tlg0020.tlg002:sent1716212:3 ὕπερθεν ὕπερθεν advmod\n",
-      "tlg0020.tlg002:sent1716212:4 πῖλος πῖλον obj\n",
-      "tlg0020.tlg002:sent1716212:11 καταδεύω καταδεύῃ advcl\n",
-      "\n",
-      "tlg0020.tlg002:sent1716245:5 ἔχειν ἔχω\n",
-      "tlg0020.tlg002:sent1716245:1 καί καὶ advmod\n",
-      "tlg0020.tlg002:sent1716245:2 τότε τότε advmod\n",
-      "tlg0020.tlg002:sent1716245:3 μηκέτι μηκέτι advmod\n",
-      "tlg0020.tlg002:sent1716245:4 ναῦς νῆας obj\n",
-      "tlg0020.tlg002:sent1716245:8 πόντος πόντῳ obl\n",
-      "tlg0020.tlg002:sent1716245:12 μιμνήσκω μεμνημένος advcl\n"
+      "tlg0013.tlg002:sent134:17 συνάγω συνάξουσ̓\n",
+      "tlg0013.tlg002:sent134:1 ὥρῃσιν ὥρα obl\n",
+      "tlg0013.tlg002:sent134:2 δ̓ δε cc\n",
+      "tlg0013.tlg002:sent134:3 ἄρα ἄρα advmod\n",
+      "tlg0013.tlg002:sent134:4 τῷ τῷ advmod\n",
+      "tlg0013.tlg002:sent134:5 γε γε advmod\n",
+      "tlg0013.tlg002:sent134:6 περιπλομένων περιπέλομαι advcl\n",
+      "tlg0013.tlg002:sent134:8 παῖδες παῖς nsubj\n",
+      "tlg0013.tlg002:sent134:10 πόλεμον πόλεμος obj\n",
+      "tlg0013.tlg002:sent134:12 φύλοπιν φύλοπις obj\n",
+      "tlg0013.tlg002:sent134:14 αἰὲν ἀεί advmod\n",
+      "tlg0013.tlg002:sent134:18 ἤματα ἦμαρ obl\n",
+      "ἵνα:mark 2\n",
+      "Ἄρης:obj 2\n",
+      "ἔρις:obj 2\n",
+      "δέ:cc 2\n",
+      "ἄρα:advmod 2\n",
+      "Τρώς:nsubj 2\n",
+      "Δαναοί:nsubj 2\n",
+      "ὑσμίνη:obj 2\n",
+      "ἀτάρ:discourse 1\n",
+      "κῆρυξ:nsubj 1\n",
+      "ὅρκιον:obj 1\n",
+      "γεραιός:obj 1\n",
+      "ναός:obl:arg 1\n",
+      "αὐτός:obl 1\n",
+      "δή:advmod 1\n",
+      "εἶπον:advcl 1\n",
+      "νεφέλη:obj 1\n",
+      "ὥρα:obl 1\n",
+      "δε:cc 1\n",
+      "τῷ:advmod 1\n",
+      "γε:advmod 1\n",
+      "περιπέλομαι:advcl 1\n",
+      "παῖς:nsubj 1\n",
+      "πόλεμος:obj 1\n",
+      "φύλοπις:obj 1\n",
+      "ἀεί:advmod 1\n",
+      "ἦμαρ:obl 1\n"
      ]
     }
    ],
@@ -192,9 +200,16 @@
     "wordid2deprel = {}\n",
     "wordid2deplist = {}\n",
     "lemmaindex = {}\n",
+    "verbargs = {}\n",
+    "worddeprels = {}\n",
     "\n",
+    "def additem(curdict,curitem):\n",
+    "    if(curitem in curdict):\n",
+    "        curdict[curitem] = curdict[curitem] + 1\n",
+    "    else:\n",
+    "        curdict[curitem] = 1\n",
     "\n",
-    "def     add2lemmaindex(lemmaindex,lemma,wordid):\n",
+    "def add2lemmaindex(lemmaindex,lemma,wordid):\n",
     "    if(not lemma in lemmaindex):\n",
     "        lemmaindex[lemma] = [wordid]\n",
     "    else:\n",
@@ -218,9 +233,10 @@
     "        m = re.search('sent_id\\s*=\\s*([0-9a-b]+)',l)\n",
     "        if(m):\n",
     "            cursentid = m[1]\n",
-    "        m = re.search('^([0-9]+)',l)\n",
+    "        m = re.search('^([0-9]+)\\s',l)\n",
     "        if(not m):\n",
     "            continue\n",
+    "        args = l.split()\n",
     "            \n",
     "        wordid = curtgwork + ':sent' + cursentid + ':' + m[1]\n",
     "        m = re.search('Ref=([^\\|]+)',l)\n",
@@ -236,20 +252,38 @@
     "        wordid2xpos[wordid] = args[4]\n",
     "        wordid2feats[wordid] = args[5]\n",
     "        wordid2head[wordid] = curtgwork + ':sent' + cursentid + ':' + args[6]\n",
+    "            \n",
+    "        wordid2deprel[wordid] = args[7]\n",
+    "    f.close()\n",
+    "\n",
+    "def resolveconj():\n",
+    "    for wordid in wordid2deprel:\n",
+    "        if(wordid2lemma[wordid] == 'μῆνις'):\n",
+    "            print('1',wordid)\n",
+    "        #print('2',wordid,wordid2lemma[wordid])\n",
+    "        if(wordid2deprel[wordid] == 'conj'):\n",
+    "            wordid2deprel[wordid] = wordid2deprel[wordid2head[wordid]]\n",
+    "            wordid2head[wordid] = wordid2head[wordid2head[wordid]]\n",
     "        if(not wordid2head[wordid] in wordid2deplist):\n",
     "            wordid2deplist[wordid2head[wordid]] = [wordid]\n",
     "        else:\n",
     "            wordid2deplist[wordid2head[wordid]].append(wordid)\n",
-    "        wordid2deprel[wordid] = args[7]\n",
-    "        args = l.split()\n",
+    "        if(not wordid in wordid2lemma):\n",
+    "            print('missing lemma',wordid)\n",
+    "            continue\n",
+    "        if(not wordid2lemma[wordid] in worddeprels):\n",
+    "            worddeprels[wordid2lemma[wordid]] = {}\n",
+    "        if(wordid2lemma[wordid] == 'μῆνις'):\n",
+    "            print(wordid,wordid2lemma[wordid],worddeprels[wordid2lemma[wordid]])\n",
+    "        additem(worddeprels[wordid2lemma[wordid]],wordid2deprel[wordid])\n",
     "\n",
-    "        #print(wordid,wordid2form[wordid],wordid2head[wordid])\n",
     "        \n",
     "        \n",
-    "    f.close()\n",
+    "\n",
     "\n",
     "lemmadeps = {}\n",
     "def getdeps(lemma):\n",
+    "    rlist = {}\n",
     "    if(not lemma in lemmaindex):\n",
     "        return\n",
     "\n",
@@ -257,59 +291,142 @@
     "    for wordid in lemmaindex[lemma]:\n",
     "        if(not wordid in wordid2deplist):\n",
     "            continue\n",
-    "        print('\\n'+wordid,wordid2form[wordid],wordid2lemma[wordid])\n",
+    "        print('\\n'+wordid,wordid2lemma[wordid],wordid2form[wordid])\n",
     "        for depid in wordid2deplist[wordid]:\n",
-    "            print(depid,wordid2lemma[depid],wordid2form[depid],wordid2deprel[depid])\n",
+    "            if(not lemma in verbargs):\n",
+    "                verbargs[lemma] = {}\n",
     "            \n",
-    "    \n",
-    "loadUDfile(flist[0])\n",
-    "getdeps('ἔχω')\n",
-    "for wordid in wordid2head:\n",
-    "    #print(wordid)\n",
-    "    if(re.search(':0$',wordid2head[wordid])):\n",
-    "        continue\n",
-    "    #print(wordid,wordid2form[wordid],wordid2form[wordid2head[wordid]])"
+    "            additem(verbargs[lemma],wordid2lemma[depid]+ ':' + wordid2deprel[depid])\n",
+    "            print(depid,wordid2form[depid],wordid2lemma[depid],wordid2deprel[depid])\n",
+    "            \n",
+    "for fname in flist:   \n",
+    "    loadUDfile(fname)\n",
+    "resolveconj()\n",
+    "\n",
+    "curlemma = 'συνάγω'\n",
+    "getdeps(curlemma)\n",
+    "for foo in sorted(verbargs[curlemma],key=verbargs[curlemma].get,reverse=True):\n",
+    "    print(foo,verbargs[curlemma][foo])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'μάχομαι'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-91-c0d01ce040c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlemmaindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'μάχομαι'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'μάχομαι'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ἵνα:mark 2\n",
+      "Ἄρης:obj 2\n",
+      "ἔρις:obj 2\n",
+      "δέ:cc 2\n",
+      "ἄρα:advmod 2\n",
+      "Τρώς:nsubj 2\n",
+      "Δαναοί:nsubj 2\n",
+      "ὑσμίνη:obj 2\n",
+      "ἀτάρ:discourse 1\n",
+      "κῆρυξ:nsubj 1\n",
+      "ὅρκιον:obj 1\n",
+      "γεραιός:obj 1\n",
+      "ναός:obl:arg 1\n",
+      "αὐτός:obl 1\n",
+      "δή:advmod 1\n",
+      "εἶπον:advcl 1\n",
+      "νεφέλη:obj 1\n",
+      "ὥρα:obl 1\n",
+      "δε:cc 1\n",
+      "τῷ:advmod 1\n",
+      "γε:advmod 1\n",
+      "περιπέλομαι:advcl 1\n",
+      "παῖς:nsubj 1\n",
+      "πόλεμος:obj 1\n",
+      "φύλοπις:obj 1\n",
+      "ἀεί:advmod 1\n",
+      "ἦμαρ:obl 1\n"
      ]
     }
    ],
    "source": [
-    "lemmaindex['μάχομαι']"
+    "curlem = 'συνάγω'\n",
+    "for foo in sorted(verbargs[curlem],key=verbargs[curlem].get,reverse=True):\n",
+    "    print(foo,verbargs[curlem][foo])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "root 58\n",
+      "acl:relcl 20\n",
+      "ccomp 10\n",
+      "advcl 9\n",
+      "appos 1\n",
+      "parataxis 1\n",
+      "acl 1\n",
+      "100 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "curlemma = 'χόλος'\n",
+    "curlemma = 'μῆνις'\n",
+    "curlemma = 'ἔχω'\n",
+    "curlemma = 'πέμπω'\n",
+    "\n",
+    "print(len(lemmaindex[curlemma]))\n",
+    "deptot = 0\n",
+    "for foo in sorted(worddeprels[curlemma],key=worddeprels[curlemma].get,reverse=True):\n",
+    "    deptot = deptot + worddeprels[curlemma][foo]\n",
+    "    print(foo,worddeprels[curlemma][foo])\n",
+    "print(deptot,deptot/len(lemmaindex[curlemma]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{'obj': 40, 'nsubj': 23, 'obl': 2, 'obl:arg': 1, 'amod': 1}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lemmaindex"
+    "worddeprels['χόλος']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'obj'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wordid2deprel['tlg0020.tlg003:sent2273422:5']"
    ]
   },
   {
