--- a/scripts/depedit/use_depedit.ipynb
+++ b/scripts/depedit/use_depedit.ipynb
@@ -57,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('data')",
+   "display_name": "data",
    "language": "python",
    "name": "python3"
   },
@@ -73,12 +73,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "f29c12a87c61eb6383010587911db04c5d869ed386a3efbb909b3787da0f0d05"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
